# snaak_vision

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  UNet_Submodule_Management.md  package.xml  requirements.txt  sam_latest_requirements.txt  unet_sam_requirements.txt
coordinates/: CMakeLists.txt  package.xml
coordinates/src/: depth_service.py  main.py  vision_node.py
coordinates/srv/: GetDepthAtPoint.srv  GetXYZFromImage.srv
launch/: snaak_vision_launch.py
src/: img_utils.py  main.py  sandwich_check.ipynb  sandwich_check.py  sandwich_checker.py  test_calibration.py  test_seg.py  vision_node.py
src/segmentation/: bread_segment.py  bread_segment_example.py  bread_segment_generator.py  cheese_segment_generator.py  meat_segment_generator.py  plate_bread_segment_generator.py  segment_utils.py  tray_segment_generator.py
srv/: CheckIngredientPlace.srv  GetXYZFromImage.srv
